# ChangeLog for gnustep-apps/addresses
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnustep-apps/cvs-repo/gentoo-x86/gnustep-apps/addresses/ChangeLog,v 1.15 2008/12/08 16:24:58 voyageur Exp $

  08 Dec 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +files/addresses-0.4.7-as-needed.patch, addresses-0.4.7.ebuild:
  Fix compilation with --as-needed, bug #250169

  16 Nov 2007; Steve Dibb <beandog@gentoo.org> addresses-0.4.7.ebuild:
  amd64 stable, bug 195990

  08 Nov 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -files/address-user-root.patch, -files/nonflattened.patch,
  -addresses-0.4.6-r1.ebuild:
  Remove old version

  27 Oct 2007; nixnut <nixnut@gentoo.org> addresses-0.4.7.ebuild:
  Stable on ppc wrt bug 195990

  17 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  addresses-0.4.7.ebuild:
  stable x86, bug 195990

*addresses-0.4.7 (10 Sep 2007)

  10 Sep 2007; Bernard Cafarelli <voyageur@gentoo.org>
  +addresses-0.4.7.ebuild:
  Version bump from the GNUstep overlay

  22 Aug 2007; Roy Marples <uberlord@gentoo.org> addresses-0.4.6-r1.ebuild:
  Keyworded ~x86-fbsd, #183467 thanks to Nathan Smith.

  18 Aug 2007; Christoph Mende <angelos@gentoo.org>
  addresses-0.4.6-r1.ebuild:
  Added ~amd64 wrt bug #170433

  11 Jun 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -addresses-0.4.6.ebuild:
  Remove old ebuild

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  addresses-0.4.6-r1.ebuild:
  Stable on ppc.

  10 Jun 2005; Armando Di Cianno <fafhrd@gentoo.org>
  addresses-0.4.6-r1.ebuild:
  updates (and stabilization of Addresses.app) of GNUMail related GNUstep ebuilds

*addresses-0.4.6-r1 (11 Nov 2004)

  11 Nov 2004; Armando Di Cianno <fafhrd@gentoo.org>
  +files/address-user-root.patch, +files/nonflattened.patch,
  +addresses-0.4.6-r1.ebuild, addresses-0.4.6.ebuild: