@@ -1,6 +1,11 @@
 # ChangeLog for gnustep-apps/addresses
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnustep-apps/cvs-repo/gentoo-x86/gnustep-apps/addresses/ChangeLog,v 1.15 2008/12/08 16:24:58 voyageur Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/gnustep-apps/cvs-repo/gentoo-x86/gnustep-apps/addresses/ChangeLog,v 1.16 2012/07/25 12:15:27 voyageur Exp $
+
+*addresses-0.4.8 (25 Jul 2012)
+
+  25 Jul 2012; Bernard Cafarelli <voyageur@gentoo.org> +addresses-0.4.8.ebuild:
+  Version bump, clean ebuild
 
   08 Dec 2008; Bernard Cafarelli <voyageur@gentoo.org>
   +files/addresses-0.4.7-as-needed.patch, addresses-0.4.7.ebuild:
